@@ -3,11 +3,8 @@ package com.goti.resale.service.application;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Component;
@@ -18,9 +15,7 @@ import org.springframework.transaction.event.TransactionalEventListener;
 
 import com.goti.constants.messages.ErrorCode;
 import com.goti.exception.CustomException;
-import com.goti.resale.constants.ResaleListingStatus;
 import com.goti.resale.domain.entity.resale.ResaleListingEntity;
-import com.goti.resale.domain.entity.resale.ResaleListingOrderEntity;
 import com.goti.resale.domain.entity.resale.ResalePriceHistoryEntity;
 import com.goti.resale.domain.entity.resale.ResaleRestrictionEntity;
 import com.goti.resale.domain.entity.resale.ResaleTransactionEntity;
@@ -28,11 +23,10 @@ import com.goti.resale.infra.TicketClient;
 import com.goti.resale.infra.dto.ResaleOrderCreatedEvent;
 import com.goti.resale.infra.dto.ResaleOrderPaymentCompletedEvent;
 import com.goti.resale.infra.dto.SettlementCompletedEvent;
-import com.goti.resale.repository.ResaleListingOrderRepository;
 import com.goti.resale.repository.ResaleRestrictionRepository;
-import com.goti.resale.repository.ResaleTransactionRepository;
 import com.goti.resale.repository.history.ResalePriceHistoryRepository;
 import com.goti.resale.repository.listing.ResaleListingRepository;
+import com.goti.resale.repository.transaction.ResaleTransactionRepository;
 import com.goti.resale.service.domain.ResaleRestrictionService;
 import com.goti.resale.service.infra.PaymentService;
 import com.goti.resale.utils.ResaleRestrictionHandler;
@@ -46,7 +40,6 @@ import lombok.extern.slf4j.Slf4j;
 public class ResaleOrderEventListener {
 
 	private final ResaleListingRepository listingRepository;
-	private final ResaleListingOrderRepository listingOrderRepository;
 	private final ResaleTransactionRepository transactionRepository;
 	private final ResalePriceHistoryRepository priceHistoryRepository;
 	private final ResaleRestrictionRepository restrictionRepository;
@@ -78,7 +71,6 @@ public class ResaleOrderEventListener {
 
 		List<ResaleListingEntity> resaleListings = new ArrayList<>();
 		List<ResalePriceHistoryEntity> priceHistories = new ArrayList<>();
-		Set<ResaleListingOrderEntity> listingOrders = new HashSet<>();
 
 		ResaleRestrictionEntity restriction = restrictionService.getOrCreateRestriction(event.buyerId());
 
@@ -87,8 +79,6 @@ public class ResaleOrderEventListener {
 
 			resaleListing.soldOut(transaction.getTransactionPrice());
 			resaleListings.add(resaleListing);
-
-			listingOrders.add(resaleListing.getListingOrder());
 
 			BigDecimal basePrice = BigDecimal.valueOf(resaleListing.getDailyBasePrice());
 			BigDecimal transactionPrice = BigDecimal.valueOf(transaction.getTransactionPrice());
@@ -114,21 +104,8 @@ public class ResaleOrderEventListener {
 		priceHistoryRepository.saveAll(priceHistories);
 		restrictionRepository.save(restriction);
 
-		for (ResaleListingOrderEntity order : listingOrders) {
-			List<ResaleListingEntity> allListings = listingRepository.findAllByListingOrderId(order.getId());
-			boolean allCompleted = allListings.stream()
-				.allMatch(l -> l.getListingStatus() == ResaleListingStatus.SOLD
-					|| l.getListingStatus() == ResaleListingStatus.CANCELED);
-			if (allCompleted) {
-				order.soldOut();
-			} else {
-				order.partial();
-			}
-			listingOrderRepository.save(order);
-		}
-
 		for (ResaleListingEntity listing : resaleListings) {
-			transferOwnershipAsync(listing.getTicketId(), event.buyerId());
+			transferOwnership(listing.getTicketId(), event.buyerId());
 		}
 
 		paymentService.releaseEscrow(event.resaleOrderId());
@@ -140,37 +117,19 @@ public class ResaleOrderEventListener {
 		log.info("정산 완료 이벤트 수신 및 처리: 주문ID {}", event.resaleOrderId());
 
 		List<ResaleTransactionEntity> transactions = transactionRepository.findAllByResaleOrderId(event.resaleOrderId());
-		Set<ResaleListingOrderEntity> listingOrders = new HashSet<>();
 
 		List<ResaleListingEntity> listings = transactions.stream()
-			.map(transaction -> {
-				ResaleListingEntity listing = transaction.getListing();
-				listing.settle();
-				listingOrders.add(listing.getListingOrder());
-				return listing;
-			})
-			.collect(Collectors.toList());
+			.map(ResaleTransactionEntity::getListing)
+			.toList();
+
+		listings.forEach(ResaleListingEntity::settle);
 
 		listingRepository.saveAll(listings);
-
-		for (ResaleListingOrderEntity order : listingOrders) {
-			List<ResaleListingEntity> allListings = listingRepository.findAllByListingOrderId(order.getId());
-			boolean allSettled = allListings.stream()
-				.allMatch(l -> l.getListingStatus() == ResaleListingStatus.SETTLED
-					|| l.getListingStatus() == ResaleListingStatus.CANCELED);
-
-			if (allSettled) {
-				order.settled();
-			} else {
-				order.partial();
-			}
-			listingOrderRepository.save(order);
-		}
 	}
 
 	// TODO: 티켓이 나오면 구현
 	@Async
-	public void transferOwnershipAsync(UUID ticketId, UUID buyerId) {
+	public void transferOwnership(UUID ticketId, UUID buyerId) {
 		try {
 			log.info("비동기 티켓 소유권 이전 시작 - 티켓ID: {}, 구매자: {}", ticketId, buyerId);
 			ticketClient.transferOwnership(ticketId, buyerId);
